restructuring, added gallery

--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pixel Art Drawer</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <title>under construction</title>
 </head>
 <body>
-    <h1>Pixel Art Drawer</h1>
-
-    <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="input_height" name="height" min="1" max="100" value="10">
-        Grid Width:
-        <input type="number" id="input_width" name="width" min="1" max="100" value="10">
-        <input type="submit" value="Make Grid">
-    </form>
-
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker" value="#000000">
-
-    <h2>Design Canvas</h2>
-    <table id="pixel_canvas">
-    </table>
-    <script src="designs.js"></script>
+  <div>
+    <a href="gallery-index.html">Gallery</a>
+    <a href="pixel-index.html">Pixel Art Drawer</a>
+  </div>
 </body>
 </html>
