--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div>
-    <a href="gallery-index.html">Gallery</a>
+    <a href="index-gallery.html">Gallery</a>
     <a href="pixel-index.html">Pixel Art Drawer</a>
   </div>
 </body>
