--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div>
-    <a href="index-gallery.html">Gallery</a>
-    <a href="pixel-index.html">Pixel Art Drawer</a>
+    <a href="gallery/index-gallery.html">Gallery</a>
+    <a href="pixel/pixel-index.html">Pixel Art Drawer</a>
   </div>
 </body>
 </html>
