--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div>
     <a href="gallery/index-gallery.html">Gallery</a>
     <a href="pixel/pixel-index.html">Pixel Art Drawer</a>
+    <img src="underconstruction.png" alt="under construction">
   </div>
 </body>
 </html>
