--- a/pixel/pixel-index.html
+++ b/pixel/pixel-index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Pixel Art Drawer</title>
     <link rel="stylesheet" href="pixel.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Play:400,700" rel="stylesheet">
 </head>
 <body>
     <h1>Pixel Art Drawer</h1>
@@ -13,7 +15,14 @@
         <input type="number" id="input_height" name="height" min="1" max="100" value="10">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" max="100" value="10">
-        <input type="submit" value="Make Grid">
+        <div class="container">
+            <a class="trash" href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <div class="arrow-right"></div>
+            <div class="delete">
+                <p>Draw</p>
+            </div>
+        </div>
+        <input type="submit" value="Draw Grid">
     </form>
 
     <h2>Pick A Color</h2>
