disable new button

--- a/pixel/pixel-index.html
+++ b/pixel/pixel-index.html
@@ -15,13 +15,13 @@
         <input type="number" id="input_height" name="height" min="1" max="100" value="10">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" max="100" value="10">
-        <div class="container">
+        <!-- <div class="container">
             <a class="trash" href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
             <div class="arrow-right"></div>
             <div class="delete">
                 <p>Draw</p>
             </div>
-        </div>
+        </div> -->
         <input type="submit" value="Draw Grid">
     </form>
 
