--- a/pixel/pixel-index.html
+++ b/pixel/pixel-index.html
@@ -16,7 +16,7 @@
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" max="100" value="10">
         <!-- <div class="container">
-            <a class="trash" href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <a class="make" href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
             <div class="arrow-right"></div>
             <div class="delete">
                 <p>Draw</p>
@@ -26,7 +26,7 @@
     </form>
 
     <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker" value="#000000">
+    <input type="color" id="colorPicker" value="#ffff00">
 
     <h2>Design Canvas</h2>
     <table id="pixel_canvas">
